--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,13 +15,10 @@
     <section class="right">
         <form action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" id="csv" name="csv">
-            <input type="submit">
+            <input type="submit" id="submit">
         </form>
         <div clas="main">
-            <table>
-                <thead></thead>
-                <tbody></tbody>
-            </table>
+            <h2>Upload File to view</h2>
         </div>
     </section>
 </body>
