--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,52 @@
 body {
-    background-color: burlywood;
+    background-image: linear-gradient(0deg, transparent 2px, rgba(0, 0, 0, 0.03) 2px, rgba(0, 0, 0, 0.03) 4px, transparent 4px), linear-gradient(90deg, transparent 2px, rgba(0, 0, 0, 0.03) 2px, rgba(0, 0, 0, 0.03) 4px, transparent 4px);
+    background-size: 10px 10px;
+    background-color: #f5f5f5; 
+    display: flex;
+    justify-content:flex-start;
+    align-items:flex-start; 
+    height: 100vh;
+    padding: 20px;
+  }
+
+.left {
+    flex:0.20;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    background-color: #ffffff;
+}
+
+.right {
+    flex:1;
+    margin-left: 5%;
+    background-color: #ffffff;
+    border: 1px solid #999999;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    border: 2px solid #999999;
+  }
+  
+  th, td {
+    border: 2px solid #999999;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  th {
+    background-color: #cce4ff;
+    color: #333333;
+    font-weight: bold;
+    /* border-left: 4px solid #bc1692;  */
+  }
+
+  tr:nth-child(even) {
+    background-color: #f5f5f5;
+}
+
+#csv {
+    display : none;
 }
