--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css" />
-    <!-- <script src="script.js" defer></script> -->
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
+    <script src="/script.js" defer></script>
     <title>Mart</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
     <section class="right">
         <form action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" id="csv" name="csv">
+            <button id="filename">No file chosen</button>
             <input type="submit" id="submit">
         </form>
         <div clas="list">
